Text align fix (#32)
* Text-Align-Fix - fixed text-align: middle

* Text-Align-Fix - removed errant style

--- a/src/types/select.scss
+++ b/src/types/select.scss
@@ -40,7 +40,6 @@
 
 		width: 100%;
 		height: 100%;
-		text-align: middle;
 		padding-left: $inputField-fieldText-horizontalPadding;
 		
 		overflow: hidden;
